# hatic

./: LICENSE  README.md  hatic.cabal  hatic.hs  haticbench.hs  haticclient.hs
Hatic/: Types.hs
