name:                hatic
version:             0.0.1.0
synopsis:            Simple Key-Value Store
-- description:         
homepage:            http://github.com/michaelbeaumont/hatic
-- license:             
license-file:        LICENSE
author:              Michael Beaumont
maintainer:          mjboamail@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.8

executable hatic
  -- main-is:             
  -- other-modules:       
  build-depends:       base ==4.6.*, directory ==1.2.*, pandoc ==1.11.*, containers ==0.5.*, hashtables ==1.1.*
